// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table brand {
  brand_id serial [
    primary key, not null,
    note: 'Unique ID for each brand'
  ]
  brand_name varchar(100) [note: 'Brand name']
  country varchar(50) [note: 'Brand’s country of origin']
  created_at timestamp [note: 'When the brand was created']

  Note: 'Each product is linked to exactly one brand.'
}

Table category {
  category_id serial [
    primary key, not null,
    note: 'Unique category ID'
  ]
  category_name varchar(100) [note: 'Category name']
  parent_category_id int [null, note: 'Link to parent category']
  level smallint [note: 'Category depth (1=main, 2=sub)']
  created_at timestamp [note: 'Record creation time']

  Note: 'Supports category hierarchy (e.g., “Electronics” → “Mobile Phones”).'
}

Table seller {
  seller_id serial [
    primary key, not null,
    note: 'Unique seller ID'
  ]
  seller_name varchar(150) [note: 'Seller or shop name']
  join_date date [note: 'Date seller joined']
  seller_type varchar(50) [note: '“Official”, “Marketplace”']
  rating decimal(2,1) [note: 'Average rating (0–5)']
  country varchar(50) [note: 'Seller’s country, Fixed “Vietnam”',default: 'Vietnam']

  created_at timestamp

  Note: 'Each seller can sell multiple products.'
}

Table product {
  product_id serial [
    primary key, not null,
    note: 'Product ID'
  ]
  product_name varchar(200) [note: 'Product name']
  category_id int [
    note: 'Product category',
    ref: > category.category_id // many-to-one
  ]
  brand_id int [
    note: 'Product brand',
    ref: > brand.brand_id // many-to-one
  ]
  seller_id int [
    note: 'Linked seller',
    ref: > seller.seller_id // many-to-one
  ]
  price decimal(12,1) [note: 'Original price']
  discount_price decimal(12,1) [note: 'Discounted price']
  stock_qty int [note: 'Quantity in stock']
  rating float [note: 'Average rating']

  created_at timestamp [note: 'When product was added']
  is_active bool [note: 'Product availability']

  Note: 'Each product belongs to one category, brand, and seller.\
        `stock_qty` decreases when orders are created.'
}

Table order {
  order_id serial [
    primary key, not null,
    note: 'Unique order ID'
  ]
  order_date timestamp [note: 'When order was placed']
  seller_id int [
    note: 'Seller fulfilling order',
    ref: > seller.seller_id // many-to-one
  ]
  status varchar(20) [note: '“PLACED”, “PAID”, "SHIPPED","DELIVERED", “CANCELLED”, “RETURNED”']
  total_amount decimal(12,2) [note: 'Total order value']

  created_at timestamp [note: 'Record creation']

  Note: 'Each order is linked to a seller and contains multiple items.'
}

Table order_item {
  order_item_id serial [
    primary key, not null,
    note: 'Unique line ID'
  ]
  order_id int [
    note: 'Parent order',
    ref: > order.order_id // many-to-one
  ]
  product_id int [
    note: 'Product sold',
    ref: > product.product_id // many-to-one
  ]
  quantity int [note: 'Units sold']
  unit_price decimal(12,2) [note: 'Price at time of order']
  subtotal decimal(12,2) [note: 'quantity * unit_price']

  created_at timestamp

  Note: 'Used to compute GMV and sales performance.'
}

Table promotion {
  promotion_id serial [
    primary key, not null,
    note: 'Promotion ID'
  ]
  promotion_name varchar(100) [note: 'Campaign name']
  promotion_type varchar(50) [note: 'Type of promotion']
  discount_type varchar(20) [note: 'Type of discount']
  discount_value numeric(10,2) [note: 'Discount value']
  start_date date [note: 'Campaign start date']
  end_date date [note: 'Campaign end date']

  created_at timestamp

  Note: 'Defines promotional campaigns applied to products.'
}

Table promotion_product {
  promo_product_id serial [
    primary key, not null,
    note: 'Unique ID'
  ]
  promotion_id int [
    note: 'Linked promo',
    ref: > promotion.promotion_id // many-to-one
  ]
  product_id int [
    note: 'Linked product',
    ref: > product.product_id // many-to-one
  ]

  created_at timestamp [note: 'Date link created']

  Note: ''
}
